--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,34 @@
         android:theme="@style/Theme.FinanceTracker"
         tools:targetApi="31">
         <activity
-            android:name=".AllTransactionsActivity"
+            android:name=".TransactionListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReportsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TransactionDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddEditCurrencyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CurrencyListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddEditGroupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GroupListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddEditCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CategoryListActivity"
             android:exported="false" />
         <activity android:name=".AddTransactionActivity" />
         <activity
